# transformer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: build.yml
causal-lm/src/: lib.rs  query_context.rs
common/: Cargo.toml
common/src/: lib.rs
devices/cambricon-mlu/: Cargo.toml  build.rs  wrapper.h
devices/cambricon-mlu/src/: lib.rs  sample.rs
docs/user-guide/: doc.md
gguf/: Cargo.toml
gguf/src/: chat_template.rs  lib.rs  tokenizer.rs
lib-operators/src/: lib.rs
middlewares/: Cargo.toml
middlewares/src/: lib.rs  session_manager.rs  utils.rs
models/clip/common/: Cargo.toml
models/clip/common-cpu/: Cargo.toml
models/clip/common-cpu/src/: infer.rs  lib.rs  test_infer.rs
models/clip/common/src/: args.rs  compute.rs  image.rs  lib.rs  storage.rs
models/clip/common/src/projector/: mod.rs  resampler.rs
models/gpt2/common/: Cargo.toml
models/gpt2/common-cpu/: Cargo.toml
models/gpt2/common-cpu/src/: infer.rs  lib.rs  test_infer.rs
models/gpt2/common/src/: args.rs  compute.rs  lib.rs  storage.rs
models/gpt2/cuda/: Cargo.toml
models/gpt2/cuda/src/: infer.rs  lib.rs
models/llama/ascend/: Cargo.toml  build.rs
models/llama/ascend/src/: lib.rs  test_infer.rs
models/llama/cambricon-mlu/src/: lib.rs
models/llama/common/: Cargo.toml
models/llama/common-cpu/: Cargo.toml
models/llama/common-cpu/src/: infer.rs  lib.rs  test_dist.rs  test_infer.rs
models/llama/common/src/: compute.rs  lib.rs  storage.rs
models/llama/cuda/: Cargo.toml
models/llama/cuda/src/: infer.rs  lib.rs  nccl_parallel.rs
models/llama/infini/: Cargo.toml  build.rs
models/llama/infini/src/: infer.rs  lib.rs  test_infer.rs
models/llama/nvidia-gpu/: Cargo.toml  build.rs
models/llama/nvidia-gpu/src/: infer.rs  lib.rs  nccl_parallel.rs  test_infer.rs
models/llama/opencl/: Cargo.toml  build.rs
models/llama/opencl/src/: infer.rs  lib.rs  test_infer.rs
models/minicpm3/common/: Cargo.toml
models/minicpm3/common-cpu/: Cargo.toml
models/minicpm3/common-cpu/src/: infer.rs  lib.rs
models/minicpm3/common/src/: args.rs  compute.rs  lib.rs  storage.rs
service/src/session/: cache.rs
tensor/: Cargo.toml
tensor/src/: fmt.rs  lib.rs  slice.rs  split.rs
test-utils/: Cargo.toml
test-utils/src/: lib.rs  llama.rs
tokenizer/: Cargo.toml
web-api/: Cargo.toml
web-api/src/: lib.rs  manager.rs  response.rs  schemas.rs
web-api/src/handlers/: cancel_handler.rs  infer_handler.rs
xtask/: build.rs
xtask/src/: generate.rs  main.rs
