[workspace]
members = [
    "common",
    "gguf",
    "tensor",
    "test-utils",

    "models/llama/common",
    "models/llama/common-cpu",
    "models/llama/opencl",
    "models/llama/nvidia-gpu",
    "models/llama/ascend",

    "models/clip/common",
    "models/clip/common-cpu",
]
resolver = "2"

[workspace.dependencies]
common.path = "common"
gguf.path = "gguf"
tensor.path = "tensor"
causal-lm.path = "causal-lm"
test-utils.path = "test-utils"

ggus = "0.3"
itertools = "0.13"
build-script-cfg = "0.0"

ndarray-layout = { git = "https://github.com/YdrMaster/ndarray-layout", rev = "f1fdd24" }
operators = { git = "https://github.com/YdrMaster/operators-rs", rev = "8183a63", default-features = false }

search-cl-tools = { git = "https://github.com/InfiniTensor/clrt", rev = "6846d52" }
search-cuda-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "e2ec203" }
search-ascend-tools = { git = "https://github.com/InfiniTensor/ascendcl", rev = "bca7489" }
