[workspace]
members = [
    "common",
    "gguf",
    "tensor",
    "test-utils",

    "models/llama/common",
    "models/llama/common-cpu",
    "models/llama/opencl",
    "models/llama/infini",
    "models/llama/nvidia-gpu",

    "models/clip/common",
    "models/clip/common-cpu",
]
resolver = "2"

[workspace.dependencies]
common.path = "common"
gguf.path = "gguf"
tensor.path = "tensor"
causal-lm.path = "causal-lm"
test-utils.path = "test-utils"

ggus = "0.3"
itertools = "0.13"
regex = "1.11"
env_logger = "0.11"
build-script-cfg = "0.0"

ndarray-layout = { git = "https://github.com/YdrMaster/ndarray-layout", rev = "f1fdd24" }
operators = { git = "https://github.com/YdrMaster/operators-rs", rev = "923949f", default-features = false }

search-cl-tools = { git = "https://github.com/InfiniTensor/clrt", rev = "6846d52" }
search-infini-tools = { git = "https://github.com/InfiniTensor/infini-rt", rev = "136c30b" }
search-cuda-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "e2ec203" }
