[workspace]
members = [
    "common",
    "gguf",
    "tensor",
    "test-utils",

    "models/llama/common",
    "models/llama/common-cpu",
    "models/llama/opencl",
    "models/llama/infini",
    "models/llama/nvidia-gpu",

    "models/clip/common",
    "models/clip/common-cpu",
]
resolver = "2"

[workspace.dependencies]
common.path = "common"
gguf.path = "gguf"
tensor.path = "tensor"
causal-lm.path = "causal-lm"
test-utils = { path = "test-utils", default-features = false }

ggus = "0.3"
ndarray-layout = "0.0"
itertools = "0.13"
regex = "1.11"
env_logger = "0.11"
build-script-cfg = "0.0"

operators = { git = "https://github.com/YdrMaster/operators-rs", rev = "7aa1051", default-features = false }
search-cl-tools = { git = "https://github.com/InfiniTensor/clrt", rev = "6846d52" }
search-infini-tools = { git = "https://github.com/InfiniTensor/infini-toolkit", rev = "9943c78" }
search-cuda-tools = { git = "https://github.com/YdrMaster/cuda-driver", rev = "e2ec203" }
