[package]
name = "middlewares"
version = "0.1.0"
edition = "2021"

[dependencies]
service = { path = "../service" }
causal-lm = { path = "../causal-lm" }

log = "0.4"
lru = "0.12"
hyper = { version = "1.3", features = ["http1", "server"] }
hyper-util = { version = "0.1", features = ["http1", "tokio", "server"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
