[package]
name = "clip"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common.workspace = true
gguf.workspace = true
tensor.workspace = true
itertools.workspace = true
image = "0.25"
rayon = "1.10"

[dev-dependencies]
test-utils.workspace = true
