[package]
name = "llama-ascend"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama.path = "../common"
operators = { workspace = true, features = ["ascend"] }

[build-dependencies]
build-script-cfg.workspace = true
search-ascend-tools.workspace = true

[dev-dependencies]
test-utils.workspace = true
gguf.workspace = true
