[package]
name = "llama-cpu"
version = "0.0.0"
edition.workspace = true
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
llama.path = "../common"
common.workspace = true
operators = { workspace = true, features = ["common-cpu"] }

[dev-dependencies]
test-utils.workspace = true
gguf.workspace = true
regex.workspace = true
