[package]
name = "minicpm3-cpu"
version = "0.0.0"
edition = "2021"
authors = ["YdrMaster <ydrml@hotmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
minicpm3.path = "../common"
common.workspace = true
operators = { workspace = true, features = ["common-cpu"] }

[dev-dependencies]
test-utils = { workspace = true, features = ["llama"] }
gguf.workspace = true
regex.workspace = true
